sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:4: error: not found: value n
  while (gap>1 || n || m) {
                  ^AlgCombSort:4: error: not found: value m
  while (gap>1 || n || m) {
                       ^